feat: posix mapper refactor with memory cache